--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -372,6 +372,7 @@
     }
     &__layer-button {
       display: flex;
+      flex-basis: 50%;
       // margin-right: auto;
       cursor: pointer;
       width: 100%;
@@ -414,11 +415,14 @@
         margin-right: abs.rem(5);
       }
       & p {
-        display: flex;
-        align-items: center;
+        // display: flex;
+        // align-items: center;
+        white-space: nowrap;
         width: 100%;
         height: 100%;
         padding-left: abs.rem(5);
+        overflow: hidden;
+        text-overflow: ellipsis;
 
         &::before {
           content: "[";
@@ -426,11 +430,6 @@
 
         &::after {
           content: "]";
-        }
-
-        & [data-tooltip]::after {
-          content: attr(data-tooltip);
-          // visibility: hidden;
         }
       }
       border: none;
@@ -512,7 +511,7 @@
     display: flex;
 
     max-height: 0vh;
-    transition: max-height 1s ease-in-out;
+    transition: max-height 0.5s ease-in;
 
     // width: 100%;
 
@@ -527,7 +526,7 @@
     &__title {
       cursor: pointer;
       padding: abs.rem(2) 0 abs.rem(4) abs.rem(130);
-      // border-bottom: 1px solid #1f1f1f;
+      border-bottom: 1px solid #1f1f1f;
 
       @include abs.md-block() {
         padding-left: abs.rem(15);
@@ -540,13 +539,13 @@
 
       & img {
         transform: rotate(0deg);
-        transition: 1s ease-in-out;
+        transition: 0.5s ease-in-out;
       }
 
       &.expd {
         & img {
           transform: rotate(90deg);
-          transition: 1s ease-in-out;
+          transition: 0.5s ease-in-out;
         }
       }
 
@@ -554,7 +553,7 @@
         max-height: 50vh;
         border-bottom: 1px solid #1f1f1f;
         padding: abs.rem(4) abs.rem(15) abs.rem(4) abs.rem(150);
-        transition: 1s ease-in-out;
+        transition: 0.5s linear;
 
         @include abs.md-block() {
           // padding-left: abs.rem(45);
@@ -570,7 +569,7 @@
       font-family: "adobecleanux_light";
       font-size: abs.rem(15);
       max-height: 0vh;
-      transition: 1s ease-in-out;
+      transition: 0.5s linear;
       overflow: hidden;
       border-bottom: 0px solid #1f1f1f;
       @include abs.md-block() {
@@ -657,8 +656,8 @@
     }
 
     .expand {
-      max-height: 30vh;
-      transition: max-height 1s ease-in-out;
+      max-height: 80vh;
+      transition: max-height 1s ease-out;
       &__left {
         justify-content: flex-start;
       }
